devtools: Add codespell to pre-commit.
Includes default config file and an initial word list to ignore.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,6 +18,14 @@ repos:
     - id: shellcheck
       args: [ -fgcc ]
 
+- repo: https://github.com/codespell-project/codespell
+  rev: v2.3.0
+  hooks:
+    - id: codespell
+      description: Checks for common misspellings.
+      exclude: ccan|contrib|tests/fuzz/corpora
+      stages: [ manual ]
+
 - repo: local
   hooks:
     # Reimplementation of `make check-amount-access` for pygrep.
