make: Updated Make commands

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -4,176 +4,182 @@
 doc-wrongdir:
 	$(MAKE) -C .. doc-all
 
-GENERATE_MARKDOWN := doc/lightning-addgossip.7 \
-	doc/lightning-addpsbtoutput.7 \
-	doc/lightning-askrene-age.7 \
-	doc/lightning-askrene-bias-channel.7 \
-	doc/lightning-askrene-create-layer.7 \
-	doc/lightning-askrene-remove-layer.7 \
-	doc/lightning-askrene-create-channel.7 \
-	doc/lightning-askrene-update-channel.7 \
-	doc/lightning-askrene-disable-node.7 \
-	doc/lightning-askrene-inform-channel.7 \
-	doc/lightning-askrene-listlayers.7 \
-	doc/lightning-askrene-listreservations.7 \
-	doc/lightning-askrene-reserve.7 \
-	doc/lightning-askrene-unreserve.7 \
-	doc/lightning-autoclean-once.7 \
-	doc/lightning-autoclean-status.7 \
-	doc/lightning-batching.7 \
-	doc/lightning-bkpr-channelsapy.7 \
-	doc/lightning-bkpr-dumpincomecsv.7 \
-	doc/lightning-bkpr-editdescriptionbyoutpoint.7 \
-	doc/lightning-bkpr-editdescriptionbypaymentid.7 \
-	doc/lightning-bkpr-inspect.7 \
-	doc/lightning-bkpr-listaccountevents.7 \
-	doc/lightning-bkpr-listbalances.7 \
-	doc/lightning-bkpr-listincome.7 \
-	doc/lightning-blacklistrune.7 \
-	doc/lightning-check.7 \
-	doc/lightning-checkmessage.7 \
-	doc/lightning-checkrune.7 \
-	doc/lightning-close.7 \
-	doc/lightning-commando.7 \
-	doc/lightning-connect.7 \
-	doc/lightning-createinvoice.7 \
-	doc/lightning-createonion.7 \
-	doc/lightning-createrune.7 \
-	doc/lightning-datastore.7 \
-	doc/lightning-datastoreusage.7 \
-	doc/lightning-decode.7 \
-	doc/lightning-decodepay.7 \
-	doc/lightning-deldatastore.7 \
-	doc/lightning-delforward.7 \
-	doc/lightning-delinvoice.7 \
-	doc/lightning-delpay.7 \
-	doc/lightning-deprecations.7 \
-	doc/lightning-dev-forget-channel.7 \
-	doc/lightning-dev-splice.7 \
-	doc/lightning-disableinvoicerequest.7 \
-	doc/lightning-disableoffer.7 \
-	doc/lightning-disconnect.7 \
-	doc/lightning-emergencyrecover.7 \
-	doc/lightning-enableoffer.7 \
-	doc/lightning-exposesecret.7 \
-	doc/lightning-feerates.7 \
-	doc/lightning-fetchinvoice.7 \
-	doc/lightning-fundchannel_cancel.7 \
-	doc/lightning-fundchannel_complete.7 \
-	doc/lightning-fundchannel.7 \
-	doc/lightning-fundchannel_start.7 \
-	doc/lightning-funderupdate.7 \
-	doc/lightning-fundpsbt.7 \
-	doc/lightning-getemergencyrecoverdata.7 \
-	doc/lightning-getinfo.7 \
-	doc/lightning-getlog.7 \
-	doc/lightning-getroute.7 \
-	doc/lightning-getroutes.7 \
-	doc/lightning-help.7 \
-	doc/lightning-injectonionmessage.7 \
-	doc/lightning-injectpaymentonion.7 \
-	doc/lightning-invoice.7 \
-	doc/lightning-invoicerequest.7 \
-	doc/lightning-keysend.7 \
-	doc/lightning-listaddresses.7 \
-	doc/lightning-listchannels.7 \
-	doc/lightning-listclosedchannels.7 \
-	doc/lightning-listconfigs.7 \
-	doc/lightning-listdatastore.7 \
-	doc/lightning-listforwards.7 \
-	doc/lightning-listfunds.7 \
-	doc/lightning-listhtlcs.7 \
-	doc/lightning-listinvoicerequests.7 \
-	doc/lightning-listinvoices.7 \
-	doc/lightning-listnodes.7 \
-	doc/lightning-listoffers.7 \
-	doc/lightning-listpays.7 \
-	doc/lightning-listpeerchannels.7 \
-	doc/lightning-listpeers.7 \
-	doc/lightning-listsendpays.7 \
-	doc/lightning-listtransactions.7 \
-	doc/lightning-makesecret.7 \
-	doc/lightning-multifundchannel.7 \
-	doc/lightning-multiwithdraw.7 \
-	doc/lightning-newaddr.7 \
-	doc/lightning-notifications.7 \
-	doc/lightning-offer.7 \
-	doc/lightning-openchannel_abort.7 \
-	doc/lightning-openchannel_bump.7 \
-	doc/lightning-openchannel_init.7 \
-	doc/lightning-openchannel_signed.7 \
-	doc/lightning-openchannel_update.7 \
-	doc/lightning-parsefeerate.7 \
-	doc/lightning-pay.7 \
-	doc/lightning-ping.7 \
-	doc/lightning-plugin.7 \
-	doc/lightning-preapproveinvoice.7 \
-	doc/lightning-preapprovekeysend.7 \
-	doc/lightning-reckless.7 \
-	doc/lightning-recoverchannel.7 \
-	doc/lightning-recover.7 \
-	doc/lightning-renepay.7 \
-	doc/lightning-renepaystatus.7 \
-	doc/lightning-reserveinputs.7 \
-	doc/lightning-sendcustommsg.7 \
-	doc/lightning-sendinvoice.7 \
-	doc/lightning-sendonion.7 \
-	doc/lightning-sendpay.7 \
-	doc/lightning-sendpsbt.7 \
-	doc/lightning-setchannel.7 \
-	doc/lightning-setconfig.7 \
-	doc/lightning-setpsbtversion.7 \
-	doc/lightning-showrunes.7 \
-	doc/lightning-signinvoice.7 \
-	doc/lightning-signmessage.7 \
-	doc/lightning-signpsbt.7 \
-	doc/lightning-splice_init.7 \
-	doc/lightning-splice_signed.7 \
-	doc/lightning-splice_update.7 \
-	doc/lightning-staticbackup.7 \
-	doc/lightning-stop.7 \
-	doc/lightning-txdiscard.7 \
-	doc/lightning-txprepare.7 \
-	doc/lightning-txsend.7 \
-	doc/lightning-unreserveinputs.7 \
-	doc/lightning-upgradewallet.7 \
-	doc/lightning-utxopsbt.7 \
-	doc/lightning-waitanyinvoice.7 \
-	doc/lightning-waitblockheight.7 \
-	doc/lightning-waitinvoice.7 \
-	doc/lightning-wait.7 \
-	doc/lightning-waitsendpay.7 \
-	doc/lightning-withdraw.7 \
-	doc/lightning-xpay.7
+MARKDOWNPAGES := doc/addgossip.7 \
+	doc/addpsbtoutput.7 \
+	doc/askrene-age.7 \
+	doc/askrene-bias-channel.7 \
+	doc/askrene-create-layer.7 \
+	doc/askrene-remove-layer.7 \
+	doc/askrene-create-channel.7 \
+	doc/askrene-update-channel.7 \
+	doc/askrene-disable-node.7 \
+	doc/askrene-inform-channel.7 \
+	doc/askrene-listlayers.7 \
+	doc/askrene-listreservations.7 \
+	doc/askrene-reserve.7 \
+	doc/askrene-unreserve.7 \
+	doc/autoclean-once.7 \
+	doc/autoclean-status.7 \
+	doc/batching.7 \
+	doc/bkpr-channelsapy.7 \
+	doc/bkpr-dumpincomecsv.7 \
+	doc/bkpr-editdescriptionbyoutpoint.7 \
+	doc/bkpr-editdescriptionbypaymentid.7 \
+	doc/bkpr-inspect.7 \
+	doc/bkpr-listaccountevents.7 \
+	doc/bkpr-listbalances.7 \
+	doc/bkpr-listincome.7 \
+	doc/blacklistrune.7 \
+	doc/check.7 \
+	doc/checkmessage.7 \
+	doc/checkrune.7 \
+	doc/close.7 \
+	doc/commando-blacklist.7 \
+	doc/commando.7 \
+	doc/commando-listrunes.7 \
+	doc/commando-rune.7 \
+	doc/connect.7 \
+	doc/createinvoice.7 \
+	doc/createonion.7 \
+	doc/createrune.7 \
+	doc/datastore.7 \
+	doc/datastoreusage.7 \
+	doc/decode.7 \
+	doc/decodepay.7 \
+	doc/deldatastore.7 \
+	doc/delforward.7 \
+	doc/delinvoice.7 \
+	doc/delpay.7 \
+	doc/deprecations.7 \
+	doc/dev-forget-channel.7 \
+	doc/dev-splice.7 \
+	doc/disableinvoicerequest.7 \
+	doc/disableoffer.7 \
+	doc/disconnect.7 \
+	doc/emergencyrecover.7 \
+	doc/enableoffer.7	\
+	doc/exposesecret.7 \
+	doc/feerates.7 \
+	doc/fetchinvoice.7 \
+	doc/fundchannel_cancel.7 \
+	doc/fundchannel_complete.7 \
+	doc/fundchannel.7 \
+	doc/fundchannel_start.7 \
+	doc/funderupdate.7 \
+	doc/fundpsbt.7 \
+	doc/getemergencyrecoverdata.7 \
+	doc/getinfo.7 \
+	doc/getlog.7 \
+	doc/getroute.7 \
+	doc/getroutes.7 \
+	doc/help.7 \
+	doc/injectonionmessage.7 \
+	doc/injectpaymentonion.7 \
+	doc/invoice.7 \
+	doc/invoicerequest.7 \
+	doc/keysend.7 \
+	doc/listaddresses.7 \
+	doc/listchannels.7 \
+	doc/listclosedchannels.7 \
+	doc/listconfigs.7 \
+	doc/listdatastore.7 \
+	doc/listforwards.7 \
+	doc/listfunds.7 \
+	doc/listhtlcs.7 \
+	doc/listinvoicerequests.7 \
+	doc/listinvoices.7 \
+	doc/listnodes.7 \
+	doc/listoffers.7 \
+	doc/listpays.7 \
+	doc/listpeerchannels.7 \
+	doc/listpeers.7 \
+	doc/listsendpays.7 \
+	doc/listtransactions.7 \
+	doc/makesecret.7 \
+	doc/multifundchannel.7 \
+	doc/multiwithdraw.7 \
+	doc/newaddr.7 \
+	doc/notifications.7 \
+	doc/offer.7 \
+	doc/openchannel_abort.7 \
+	doc/openchannel_bump.7 \
+	doc/openchannel_init.7 \
+	doc/openchannel_signed.7 \
+	doc/openchannel_update.7 \
+	doc/parsefeerate.7 \
+	doc/pay.7 \
+	doc/ping.7 \
+	doc/plugin.7 \
+	doc/preapproveinvoice.7 \
+	doc/preapprovekeysend.7 \
+	doc/reckless.7 \
+	doc/recoverchannel.7 \
+	doc/recover.7 \
+	doc/renepay.7 \
+	doc/renepaystatus.7 \
+	doc/reserveinputs.7 \
+	doc/sendcustommsg.7 \
+	doc/sendinvoice.7 \
+	doc/sendonion.7 \
+	doc/sendpay.7 \
+	doc/sendpsbt.7 \
+	doc/setchannel.7 \
+	doc/setconfig.7 \
+	doc/setpsbtversion.7 \
+	doc/showrunes.7 \
+	doc/signinvoice.7 \
+	doc/signmessage.7 \
+	doc/signpsbt.7 \
+	doc/splice_init.7 \
+	doc/splice_signed.7 \
+	doc/splice_update.7 \
+	doc/staticbackup.7 \
+	doc/stop.7 \
+	doc/txdiscard.7 \
+	doc/txprepare.7 \
+	doc/txsend.7 \
+	doc/unreserveinputs.7 \
+	doc/upgradewallet.7 \
+	doc/utxopsbt.7 \
+	doc/waitanyinvoice.7 \
+	doc/waitblockheight.7 \
+	doc/waitinvoice.7 \
+	doc/wait.7 \
+	doc/waitsendpay.7 \
+	doc/withdraw.7 \
+	doc/xpay.7
 
 ifeq ($(HAVE_SQLITE3),1)
-GENERATE_MARKDOWN += doc/lightning-listsqlschemas.7 \
-	doc/lightning-sql.7
+MARKDOWNPAGES += doc/listsqlschemas.7 doc/sql.7
 endif
 
-MANPAGES := $(GENERATE_MARKDOWN) \
-	doc/lightning-cli.1 \
+PREFIXED_MANPAGES := $(MARKDOWNPAGES:doc/%.7=doc/lightning-%.7)
+NON_PREFIXED_MANPAGES := doc/lightning-cli.1 \
 	doc/lightningd.8 \
 	doc/lightningd-config.5 \
 	doc/lightningd-rpc.7 \
-	doc/lightning-hsmtool.8 \
-	doc/reckless.7
+	doc/lightning-hsmtool.8
 
-MARKDOWN_WITH_SCHEMA := $(GENERATE_MARKDOWN:=.md)
+MANPAGES := $(PREFIXED_MANPAGES) $(NON_PREFIXED_MANPAGES)
 
-# - Read the json template from schemas/lightning-sql-template.json
+MARKDOWNPAGES_WITH_EXT := $(MARKDOWNPAGES:=.md)
+NON_PREFIXED_MARKDOWNPAGES_WITH_EXT := $(NON_PREFIXED_MANPAGES:=.md)
+OLD_MARKDOWNPAGES_WITH_EXT := $(PREFIXED_MANPAGES:=.md)
+
+
+# - Read the json template from schemas/sql-template.json
 # - Generate the tables schema via plugins/sql
-# - Merge both and generate final schemas/lightning-sql.json
-doc/schemas/lightning-sql.json: doc/schemas/lightning-sql-template.json plugins/sql
+# - Merge both and generate final schemas/sql.json
+doc/schemas/sql.json: doc/schemas/sql-template.json plugins/sql
 	@plugins/sql --print-docs | jq --arg sqldata "$$(awk '{printf "%s\n", $$0}')" '.tables += [$$sqldata]' $< > "$@.tmp" && mv "$@.tmp" "$@";
 
 doc-all: $(MANPAGES) doc/index.rst
 
-SCHEMAS := $(wildcard doc/schemas/lightning-*.json) $(wildcard doc/schemas/notification/*.json)
+SCHEMAS := $(wildcard doc/schemas/*.json) $(wildcard doc/schemas/notification/*.json)
 
-# Don't try to build lightning-sql.json tables with plugins/sql if we don't have sqlite3
+# Don't try to build sql.json tables with plugins/sql if we don't have sqlite3
 ifeq ($(HAVE_SQLITE3),0)
-SCHEMAS := $(filter-out doc/schemas/lightning-sql.json, $(SCHEMAS))
+SCHEMAS := $(filter-out doc/schemas/sql.json, $(SCHEMAS))
 endif
 
 check-fmt-schemas: $(SCHEMAS:%=check-fmt-schema/%)
@@ -191,7 +197,7 @@ check-doc: check-config-docs check-manpages check-fmt-schemas
 LBRACKET=(
 RBRACKET=)
 
-$(MARKDOWN_WITH_SCHEMA): doc/lightning-%.7.md: doc/schemas/lightning-%.json tools/fromschema.py
+$(MARKDOWNPAGES_WITH_EXT): doc/%.7.md: doc/schemas/%.json tools/fromschema.py
 	@tools/fromschema.py --markdownfile=$@ $< > $@.tmp && mv $@.tmp $@
 
 # If we need to build lowdown, make tools/md2man.sh depend on it.
@@ -217,8 +223,10 @@ doc/.doc_version: version_gen.h
 	echo $$DOC_VERSION > $@.new
 	@if cmp $@.new $@ >/dev/null 2>&1; then rm -f $@.new; else mv $@.new $@; $(ECHO) Documentation version updated to `cat doc/.doc_version`; fi
 
-$(MANPAGES): doc/%: doc/%.md tools/md2man.sh doc/.doc_version
-	@VERSION=`cat doc/.doc_version` tools/md2man.sh $(LOWDOWN) $< > $@
+$(PREFIXED_MANPAGES): doc/lightning-%: doc/%.md tools/md2man.sh doc/.doc_version
+	@VERSION=`cat doc/.doc_version` tools/md2man.sh $(LOWDOWN) $<
+$(NON_PREFIXED_MANPAGES): doc/%: doc/%.md tools/md2man.sh doc/.doc_version
+	@VERSION=`cat doc/.doc_version` tools/md2man.sh $(LOWDOWN) $<
 
 doc/protocol-%.svg: test/test_protocol
 	test/test_protocol --svg < test/commits/$*.script > $@
@@ -259,18 +267,21 @@ check-manpages: all-programs check-config-docs default-targets
 
 # Makes sure that fields mentioned in schema are in man page, and vice versa.
 check-config-docs:
-	@for c in `sed -n 's/^	"\(.*\)": {/\1/p' doc/schemas/lightning-listconfigs.json | grep -v '^# version$$' | grep -v '^plugins$$' | grep -v '^important-plugins$$'`; do if ! grep -q "^ \*\*$$c\*\*" doc/lightningd-config.5.md; then echo "$$c undocumented!"; exit 1; fi; done
-	@for c in `grep -v '\[plugin ' doc/lightningd-config.5.md | sed -n 's/^ \*\*\([^*]*\)\*\*.*/\1/p' | grep -v '^\(help\|version\|mainnet\|testnet\|testnet4\|signet\|plugin\|important-plugin\|plugin-dir\|clear-plugins\)$$'`; do if ! grep -q '"'"$$c"'"' doc/schemas/lightning-listconfigs.json; then echo "$$c documented but not in schema!"; exit 1; fi; done
+	@for c in `sed -n 's/^	"\(.*\)": {/\1/p' doc/schemas/listconfigs.json | grep -v '^# version$$' | grep -v '^plugins$$' | grep -v '^important-plugins$$'`; do if ! grep -q "^ \*\*$$c\*\*" doc/lightningd-config.5.md; then echo "$$c undocumented!"; exit 1; fi; done
+	@for c in `grep -v '\[plugin ' doc/lightningd-config.5.md | sed -n 's/^ \*\*\([^*]*\)\*\*.*/\1/p' | grep -v '^\(help\|version\|mainnet\|testnet\|testnet4\|signet\|plugin\|important-plugin\|plugin-dir\|clear-plugins\)$$'`; do if ! grep -q '"'"$$c"'"' doc/schemas/listconfigs.json; then echo "$$c documented but not in schema!"; exit 1; fi; done
 
 doc-clean:
-	$(RM) $(MANPAGES) $(MARKDOWN_WITH_SCHEMA) doc/.doc_version
+	$(RM) $(MANPAGES) $(MARKDOWNPAGES_WITH_EXT) $(OLD_MARKDOWNPAGES_WITH_EXT) doc/.doc_version
 	$(RM) doc/deployable-lightning.{aux,bbl,blg,dvi,log,out,tex}
 
-doc/index.rst: $(MANPAGES:=.md) Makefile
+doc/index.rst: $(MARKDOWNPAGES_WITH_EXT) $(NON_PREFIXED_MARKDOWNPAGES_WITH_EXT) Makefile
 	@$(call VERBOSE, "genidx $@", \
-	  for m in $(MANPAGES); do basename $$m; done |  \
+	  for m in $(MARKDOWNPAGES_WITH_EXT) $(NON_PREFIXED_MARKDOWNPAGES_WITH_EXT); do \
+	    base=$$(basename "$$m"); \
+	    echo "$$base" | \
+	      sed -E 's/^(.*)\.([0-9]+)\.md$$/\1 <\1.\2.md>/; t; s/^(.*)\.md$$/\1 <\1.md>/'; \
+	  done | \
 	  LC_ALL=C sort | \
-	  sed "s/\(.*\)\.\(.*\)/\1 <\1.\2.md>/" | \
 	  $(PYTHON) devtools/blockreplace.py doc/index.rst manpages --language=rst --indent "   " \
 	)
 
