Makefile: generate and install requirements.txt files for Python plugins.
Doesn't automate the install, but at least provides some tools for users
to install the requirements on their systems

Changelog-Added: Install: we now supply requirements.txt file for Python plugin (i.e. wss-proxy).
See-also: https://github.com/ElementsProject/lightning/issues/7665
Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>

--- a/plugins/Makefile
+++ b/plugins/Makefile
@@ -311,8 +311,17 @@ include plugins/rest-plugin/Makefile
 DEFAULT_TARGETS += $(CLN_PLUGIN_EXAMPLES) plugins/cln-grpc plugins/clnrest
 endif
 
+ifneq ($(NO_PYTHON), 1)
+PLUGIN_REQUIREMENTS_TXT := plugins/wss-proxy-requirements.txt
+plugins/wss-proxy-requirements.txt: plugins/wss-proxy/pyproject.toml plugins/wss-proxy/poetry.lock
+	cd plugins/wss-proxy && poetry export --without-hashes > ../../$@
+
+all-programs: $(PLUGIN_REQUIREMENTS_TXT)
+endif
+
 clean: plugins-clean
 plugins-clean:
+	$(RM) $(PLUGIN_REQUIREMENTS_TXT)
 	$(RM) $(PLUGINS) $(CLN_PLUGIN_EXAMPLES)
 	$(RM) plugins/sql-schema_gen.h
 
