xpay: add xpay-slow-mode to force waiting for all parts before returning.
This was requested by Michael of Boltz; it's mainly useful if you plan to
try failed payments on a *different* node.  In that case, there's a
theoretical possibility that slow parts of this payment could combine with
that from a different node and overpay.

We don't allow this from the same node, already.

Changelog-Added: xpay: `xpay-slow-mode` makes xpay wait for all parts of a payment to complete before returning success or failure.
Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>

--- a/doc/schemas/lightning-listconfigs.json
+++ b/doc/schemas/lightning-listconfigs.json
@@ -2989,6 +2989,12 @@
             "source": "default",
             "plugin": "/root/lightning/plugins/cln-xpay",
             "dynamic": true
+          },
+          "xpay-slow-mode": {
+            "value_bool": false,
+            "source": "default",
+            "plugin": "/root/lightning/plugins/cln-xpay",
+            "dynamic": true
           }
         }
       }
