--- a/doc/schemas/lightning-listconfigs.json
+++ b/doc/schemas/lightning-listconfigs.json
@@ -2594,7 +2594,7 @@
           },
           "autoclean-expiredinvoices-age": {
             "value_int": 300,
-            "source": "/tmp/.lightning/regtest/config:2",
+            "source": "/tmp/.lightning/regtest/config.setconfig:2",
             "plugin": "/root/lightning/plugins/autoclean",
             "dynamic": true
           },
@@ -2903,7 +2903,7 @@
           },
           "min-capacity-sat": {
             "value_int": 500000,
-            "source": "/tmp/.lightning/regtest/config:4",
+            "source": "/tmp/.lightning/regtest/config.setconfig:3",
             "dynamic": true
           },
           "min-emergency-msat": {
