wss-proxy: update dependencies
This should allow the last published version or the
local build (pyln-client v25.02)

--- a/plugins/wss-proxy/pyproject.toml
+++ b/plugins/wss-proxy/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["ShahanaFarooqui <sfarooqui@blockstream.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-pyln-client = "^24.2"
+pyln-client = ">=24.11 <25.05"
 websockets = "^12.0"
 
 
