--- a/plugins/wss-proxy/pyproject.toml
+++ b/plugins/wss-proxy/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "wss-proxy"
-version = "25.02rc3"
+version = "25.02"
 description = "Web secure socket proxy"
 authors = ["ShahanaFarooqui <sfarooqui@blockstream.com>"]
 
