ci: Fixed python to version 3.10
The pypi publishing failed due to `ERROR: No matching distribution found for poetry==2.1.1`. Fixing Python version resolves the issue.

--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -59,9 +59,12 @@ jobs:
         echo "EVENT DISTLOCATION: ${{ github.event.inputs.dist-location }}"
         echo "DISTRIBUTION LOCATION: $DISTLOCATION"
   
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+
     - name: Install Poetry
-      env:
-        WORKDIR: ${{ matrix.WORKDIR }}
       run: |
         curl -sSL https://install.python-poetry.org | python3 -
         echo "$HOME/.local/bin" >> $GITHUB_PATH
