--- a/plugins/Makefile
+++ b/plugins/Makefile
@@ -148,7 +148,7 @@ plugins/cln-grpc: target/${RUST_PROFILE}/cln-grpc
 plugins/clnrest: target/${RUST_PROFILE}/clnrest
 	@cp $< $@
 
-PLUGINS += plugins/cln-grpc plugins/clnrest
+PLUGINS += plugins/cln-grpc plugins/clnrest plugins/cln-lsps
 endif
 
 PLUGIN_COMMON_OBJS :=				\
@@ -300,6 +300,7 @@ CLN_PLUGIN_EXAMPLES := \
 CLN_PLUGIN_SRC = $(shell find plugins/src -name "*.rs")
 CLN_GRPC_PLUGIN_SRC = $(shell find plugins/grpc-plugin/src -name "*.rs")
 CLN_REST_PLUGIN_SRC = $(shell find plugins/rest-plugin/src -name "*.rs")
+CLN_LSPS_PLUGIN_SRC = $(shell find plugins/lsps-plugin/src -name "*.rs")
 
 target/${RUST_PROFILE}/cln-grpc: ${CLN_PLUGIN_SRC} ${CLN_GRPC_PLUGIN_SRC} $(MSGGEN_GENALL) $(MSGGEN_GEN_ALL)
 	cargo build ${CARGO_OPTS} --bin cln-grpc
