make: remove plugins/clnrest dir prior to building clnrest
When building in the same directory used for <=v24.11, this would occur:
  cp: cannot create regular file plugins/clnrest: Permission denied
  make: *** [plugins/Makefile:149: plugins/clnrest] Error 1
  make: *** Waiting for unfinished jobs....

Remove the old directory so the new rust binary can take its place.

Changelog-Fixed: `make` cleans up old clnrest directory prior to building the new plugin.

--- a/plugins/Makefile
+++ b/plugins/Makefile
@@ -304,6 +304,7 @@ CLN_REST_PLUGIN_SRC = $(shell find plugins/rest-plugin/src -name "*.rs")
 target/${RUST_PROFILE}/cln-grpc: ${CLN_PLUGIN_SRC} ${CLN_GRPC_PLUGIN_SRC} $(MSGGEN_GENALL) $(MSGGEN_GEN_ALL)
 	cargo build ${CARGO_OPTS} --bin cln-grpc
 target/${RUST_PROFILE}/clnrest: ${CLN_REST_PLUGIN_SRC}
+	@if [ -d "plugins/clnrest" ]; then rm -rf plugins/clnrest; fi
 	cargo build ${CARGO_OPTS} --bin clnrest
 
 ifneq ($(RUST),0)
