--- a/plugins/lsps-plugin/Cargo.toml
+++ b/plugins/lsps-plugin/Cargo.toml
@@ -3,6 +3,10 @@ name = "cln-lsps"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "cln-lsps-client"
+path = "src/client.rs"
+
 [dependencies]
 anyhow = "1.0"
 async-trait = "0.1"
