--- a/.github/workflows/bsd.yml
+++ b/.github/workflows/bsd.yml
@@ -34,6 +34,52 @@ jobs:
             gettext \
             sqlite3 \
             lowdown \
+            curl \
+            sudo
+
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain nightly-2021-08-3z1
+
+          cd /tmp/ || exit 1
+          wget https://bitcoincore.org/bin/bitcoin-core-27.1/bitcoin-27.1-x86_64-linux-gnu.tar.gz
+          tar -xf bitcoin-27.1-x86_64-linux-gnu.tar.gz
+          sudo mv bitcoin-27.1/bin/* /usr/local/bin
+          rm -rf \
+            bitcoin ▋name: FreeBSD Test
+
+on:
+  push:
+    branches:
+      - "master"
+  pull_request:
+
+jobs:
+  testfreebsd:
+    runs-on: ubuntu-latest
+    name: Build and test on FreeBSD
+    timeout-minutes: 120
+    steps:
+    - uses: actions/checkout@v4
+    - name: Test in FreeBSD
+      id: test
+      uses: vmactions/freebsd-vm@v1
+      with:
+        usesh: true
+        prepare: |
+          pkg install -y \
+            wget \
+            py38-pip \
+            py38-sqlite3 \
+            gmake \
+            git \
+            python \
+            postgresql12-server \
+            autoconf \
+            automake \
+            libtool \
+            bash \
+            gettext \
+            sqlite3 \
+            lowdown \
             curl
 
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain nightly-2021-08-3z1
