github: Remove prefix from docs and actions
Changelog-Changed: Removed lightning- prefix from schemas/.json and doc/.md files.

--- a/.github/workflows/readme-rpc-sync.yml
+++ b/.github/workflows/readme-rpc-sync.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - 'master'
     paths:
-      - 'doc/schemas/lightning-*.json'
+      - 'doc/schemas/*.json'
       - 'doc/*.1.md'
       - 'doc/*.5.md'
       - 'doc/*.8.md'
