poetry: update poetry.lock
Also resolved:
The poetry.dev-dependencies section is deprecated and will be removed
in a future version. Use poetry.group.dev.dependencies instead.

--- a/contrib/msggen/pyproject.toml
+++ b/contrib/msggen/pyproject.toml
@@ -11,7 +11,7 @@ include = ["msggen/schema.json"]
 [tool.poetry.dependencies]
 python = "^3.6"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pytest = "^6.2.5"
 
 [build-system]
