--- a/cln-grpc/Cargo.toml
+++ b/cln-grpc/Cargo.toml
@@ -15,12 +15,13 @@ server = ["cln-rpc"]
 [dependencies]
 anyhow = "1.0"
 log = "0.4"
-cln-rpc = { path="../cln-rpc/", version = "0.4", optional = true }
+cln-rpc = { path = "../cln-rpc/", version = "0.4", optional = true }
+cfg-if = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tonic = { version = "0.11", features = ["tls", "transport"] }
 prost = "0.12"
 hex = "0.4.3"
-bitcoin = { version = "0.31", features = [ "serde" ] }
+bitcoin = { version = "0.31", features = ["serde"] }
 tokio-stream = { version = "0.1.14", features = ["sync"] }
 tokio = { version = "1.36.0", features = ["sync"] }
 futures-core = "0.3.30"
@@ -28,7 +29,7 @@ tokio-util = "0.7.10"
 
 [dev-dependencies]
 serde_json = "1.0.72"
-cln-rpc = { path="../cln-rpc/", version = "0.4" }
+cln-rpc = { path = "../cln-rpc/", version = "0.4" }
 
 [build-dependencies]
 tonic-build = "0.11"
